dataset1235/2025-2/805158916/users/2584427029/executions/1584167357_2935826613.log
== SUBMISSION (2025-08-27 15:17:15)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(round) (fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 14:54:45)
-- CODE: 
celsius = float(input())
fahrenheit = (9/5) * celsius + 32
print(temperatura) (fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(temperatura) (fahrenheit,2)
          ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(temperatura) (fahrenheit,2)
          ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(temperatura) (fahrenheit,2)
          ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(temperatura) (fahrenheit,2)
          ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(temperatura) (fahrenheit,2)
          ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(temperatura) (fahrenheit,2)
          ^^^^^^^^^^^
NameError: name 'temperatura' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-27 15:10:14)
-- CODE: 
celsius = float(input("Digite a temperatura"))
fahrenheit = (9/5) * celsius + 32
print(round) (fahrenheit,2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
0.0
---- correct output:
32.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 2:
---- input:
220.1
---- correct output:
428.18
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 3:
---- input:
40.7
---- correct output:
105.26
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 4:
---- input:
10.2
---- correct output:
50.36
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 5:
---- input:
12.4
---- correct output:
54.32
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- TEST CASE 6:
---- input:
40.0
---- correct output:
104.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round) (fahrenheit,2)
TypeError: 'NoneType' object is not callable
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
